// This file defines messages used in in Peloton Watch APIs.

syntax = "proto3";

package peloton.api.v1alpha.watch;

option go_package = "peloton/api/v1alpha/watch";
option java_package = "peloton.api.v1alpha.watch";

import "peloton/api/v1alpha/peloton.proto";

// StatelessJobFilter specifies the job(s) to watch.
message StatelessJobFilter
{
  // The IDs of the jobs to watch. If unset, all jobs will be monitored.
  repeated peloton.JobID job_ids = 1;

  // Filter based on labels in the job specification. Only jobs which
  // have all the labels provided in the filter will be watched.
  repeated peloton.Label labels = 2;
}

// PodFilter specifies a filter for the pod(s) to be watched.
message PodFilter
{
  // The JobID of the pods that will be monitored.
  peloton.JobID job_id = 1;

  // Names of the pods to watch. This filter is active only if the
  // job_id filter is defined as well. If empty, all pods in the job will
  // be watched.
  repeated peloton.PodName pod_names = 2;

  // Filter based on labels in the pod specification. Only pods which
  // have all the labels provided in the filter will be watched.
  repeated peloton.Label labels = 3;
}
